# AdaWorld

./: .gitignore  README.md  conda_environment.yaml  download_open_x.sh  process_rtx.py  pyproject.toml  requirements.txt
data_download/: utils.py
data_download/miradata/: download_metadata.py  download_miradata_360p.py  remove_raw_videos.sh  utils.py
data_download/open_x/: constants.py  download_open_x.sh  download_specific_dataset.sh  episode_count_per_dataset.json  install_gsutil.sh  process_rtx.py
data_download/something_something_v2/: download_with_wget.sh
dependencies/: create_all_conda_envs.sh  generate_conda_yaml.sh
dependencies/data_download/: conda_environment.yaml  pyproject.toml
dependencies/gym_retro_env/: conda_environment.yaml  pyproject.toml
dependencies/sample_procgen_env/: conda_environment.yaml  pyproject.toml
dependencies/stableretro_env/: conda_environment.yaml  pyproject.toml
jobs/: download_openx.job  download_ssv2.job  install_environment.job
sampling_scripts/: sample_procgen.py  sample_retro.py  sample_stableretro.py
