[project]
name = "adaworld"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "deepspeed==0.10.1",
    "einops==0.8.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "kmeans-pytorch==0.3",
    "kornia==0.7.4",
    "lightning==2.0.8",
    "natsort>=8.4.0",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.20.0",
    "opencv-python==4.10.0.84",
    "piq==0.8.0",
    "pytorch-lightning==2.0.1",
    "safetensors==0.5.1",
    "scikit-learn==1.6.1",
    "scipy==1.14.1",
    "triton==2.0.0",
    "xformers>=0.0.20",
]
