[project]
name = "data_download_env"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "datasets>=4.1.1",
    "ego4d>=1.7.3",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=1.17.0,<2.0.0",
    "pandas>=2.3.2",
    "protobuf==3.20.3",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "tensorflow==2.12.0",
    "tensorflow-datasets>=4.9.9",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.9.26",
]
